tests/bad/ifthenelse0.tig
let function test(x: int, y:int) =
    if x = y then (print("OK"); 3)
in test(3, 4)
end
